RESULTS/AutoSpec/raw_results/out-4o-nla/19_0005/19_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/19_0005/19_merged.c:14:104: error: unterminated comment
   14 |     loop invariant x == \sum(1 <= i <= c, i*i*i*i*i) + \sum(0, x); /* Sum of i^5 for all iterations */;
      |                                                                                                        ^
